--- a/css/index.css
+++ b/css/index.css
@@ -16,6 +16,12 @@
   line-height: 1.8em;
 }
 
+@media screen and (min-width: 700px) {
+  * {
+    font-size: 1.5em;
+  }
+}
+
 .welcome {
   width: 80vw;
   text-align: center;
@@ -216,13 +222,24 @@
 }
 
 .article {
-  width: 80vw;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
   margin: auto;
   padding-bottom: 2rem;
   background-color: #d6d2d1;
   color: rgba(0, 0, 0, 0.9);
+}
+
+@media screen and (max-width: 700px) {
+  .article {
+    width: 100vw;
+  }
+}
+
+@media screen and (min-width: 700px) {
+  .article {
+    width: 80vw;
+  }
 }
 
 .article-title {
@@ -233,7 +250,6 @@
 
 .article-content {
   font-size: 1.4rem;
-  text-align: justify;
   padding: 1rem 3rem;
 }
 
@@ -281,7 +297,6 @@
 
 .section-content {
   font-size: 1.5rem;
-  text-align: justify;
   padding: 1rem 3rem;
 }
 
